[package]
name = "udspong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pong-client"
path = "src/client.rs"

[[bin]]
name = "pong-server"
path = "src/pongserver.rs"


[dependencies]
mio = {version="0.8.6",features=["os-poll","net"]}
tokio-util = {version="0.7.7",features=["full"]}
bytes = "1.0.0"
tokio = {version="1.26.0",features = ["rt","net","macros","rt-multi-thread","io-util","sync"]}
futures = { version = "0.3.0", features = ["thread-pool"]}
tokio-stream = "0.1.12"